--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -88,7 +88,7 @@
                 <li class="nav-item app-dropdown">
                     <div class="kr-sg-dropdowns"  ngbDropdown #myDrop="ngbDropdown" [placement]="'bottom-center'">
                         <div class="dropdown dropdown-open">
-                            <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{appName|titlecase}}</button>
+                            <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{appName}}</button>
                             <ul class="dropdown-menu content-menu" ngbDropdownMenu>
                                 <div class="search-assist-apps">
                                     <div class="main-title">SearchAssist Apps</div>
