1. SearchInsights : “Search queries” should be renamed to “Search Results” 2. SearchInsights : User should not display “FAQ Response” tag 3. Result Insights : Space between “Search Results” and “Appearances” should be there 4. Result Insights : If there is one page, Pagination should not be displayed 5. Result Insights : User should not see “PageResponse” tag

--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -206,6 +206,9 @@
             line-height: 14px;
             color: #202124;   
             cursor: default;
+            &.search-results{
+                padding: 0 50px 5px 0px;
+            }
             img{
                 cursor: pointer;
             } 
@@ -249,7 +252,7 @@
             position: relative;
             height: auto !important;
             box-shadow: none;
-            margin-bottom: 25px;
+            margin-bottom: 10px;
             .small-title{
                 color: #9AA0A6;
                 font-weight: 500;
