--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -68,7 +68,7 @@
                         <!-- <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Negative_Feedback'| translate}}</span></div>  -->
                     </div>
                     <div class="table_body row m-0" *ngFor="let result of resultsData | filter: [ searchSources , 'answer'];let i = index">
-                        <div class="col-4 title d-flex align-items-center">
+                        <div class="col-4 title d-flex align-items-center search-results">
                             <span class="img-sec" *ngIf="result.answerType =='faq'"><img src="assets/icons/question-box.svg" ></span>
                             <span class="img-sec" *ngIf="result.answerType =='page'"><img src="assets/icons/sidemenu/new-icons/page.svg" ></span>
                             <span class="img-sec" *ngIf="result.answerType =='task'"><img src="assets/icons/sidemenu/new-icons/actions.svg" ></span>
@@ -123,7 +123,7 @@
                 <div class="col-1 title d-flex align-items-start"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Negative_Feedback'| translate}}</span></div> -->
             </div>
             <div class="table_body row m-0" *ngFor="let result of resultsSearchData">
-                <div class="col-4 title d-flex align-items-center">
+                <div class="col-4 title d-flex align-items-center search-results">
                     <!-- <span class="img-sec"><img src="assets/icons/question-box.svg"></span> -->
                     <span class="results pl-3">{{result.query}}</span>
                 </div>
@@ -135,7 +135,7 @@
                 <div class="col-1 title">{{result.negativeFeedback}}</div> -->
             </div>                   
         </div>
-        <span *ngIf='Q_totalRecord'><app-record-pagination [totalRecord]='Q_totalRecord' [limitpage]='Q_limitPage' (pageChanged)="paginate($event,'QRESULT')"></app-record-pagination></span>
+        <span *ngIf='Q_totalRecord && (limitPage < Q_totalRecord)'><app-record-pagination [totalRecord]='Q_totalRecord' [limitpage]='Q_limitPage' (pageChanged)="paginate($event,'QRESULT')"></app-record-pagination></span>
     </div>
   </perfect-scrollbar>
   <!-- <div class="modal-footer">
