--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -40,16 +40,16 @@
                     <div class="label-text">Search Box Customization</div>
                     <div class="d-flex search-customization-input">
                         <div class="kr-sg-input-search" [ngClass]="{'added-tour':tourGuide==='step1'||tourGuide==='step2'||tourGuide==='step3'}">                               
-                            <input type="text" class="input-search" [ngClass]="{'activeBox':selectSearch=='inputBox'}" [ngStyle]="{'background':searchObject.searchWidgetConfig.searchBarFillColor,'border-color':searchObject.searchWidgetConfig.searchBarBorderColor}" (click)="selectSearchBox('inputBox');$event.stopPropagation();" readonly>
+                            <input type="text" class="input-search" [ngClass]="{'activeBox':selectSearch=='inputBox'}" [ngStyle]="{'background':searchObject.searchWidgetConfig.searchBarFillColor,'border-color':searchObject.searchWidgetConfig.searchBarBorderColor}" (click)="selectSearchBox('inputBox');$event.stopPropagation();closeAllBoxs('all');" readonly>
                             <img [src]="searchIcon" class="search-icon" [ngClass]="{'activeBox':selectSearch=='inputIcon'}" (click)="selectSearchBox('inputIcon');$event.stopPropagation();" height="15" width="15">
-                            <input #elasticInput class="placeholder-custom-search" value="{{searchObject.searchWidgetConfig.searchBarPlaceholderText}}" placeholder="search" (click)="selectSearchBox('placeholderText');$event.stopPropagation()" [ngClass]="{'activeBox':selectSearch=='placeholderText'}" [ngStyle]="{'color':searchObject.searchWidgetConfig.searchBarPlaceholderTextColor,'width.px': width,'background':'none'}" #data (change)="onEventLog('placeholderText',data.value);" (input)="resize()"> 
+                            <input #elasticInput class="placeholder-custom-search" value="{{searchObject.searchWidgetConfig.searchBarPlaceholderText}}" placeholder="search" (click)="selectSearchBox('placeholderText');$event.stopPropagation();closeAllBoxs('all');" [ngClass]="{'activeBox':selectSearch=='placeholderText'}" [ngStyle]="{'color':searchObject.searchWidgetConfig.searchBarPlaceholderTextColor,'width.px': width,'background':'none'}" #data (change)="onEventLog('placeholderText',data.value);" (input)="resize()"> 
                             <span #hiddenText style="visibility: hidden; white-space: pre;">{{elasticInput.value}}</span>
-                            <button class="btn-customize kr-sg-button-primary read-mode btn_lg inside-input-btn"  (click)="selectSearchBox('button')" [ngClass]="{'activeBox':selectSearch=='button','added-tour':tourGuide==='step4'}" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" [disabled]="buttonDisabled" *ngIf="(searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='inside')||searchObject.searchExperienceConfig.searchBarPosition==='bottom'">
+                            <button class="btn-customize kr-sg-button-primary read-mode btn_lg inside-input-btn"  (click)="selectSearchBox('button');closeAllBoxs('all');" [ngClass]="{'activeBox':selectSearch=='button','added-tour':tourGuide==='step4'}" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" [disabled]="buttonDisabled" *ngIf="(searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='inside')||searchObject.searchExperienceConfig.searchBarPosition==='bottom'">
                                 <span>{{searchObject.searchWidgetConfig.buttonText}}</span>
                                 <div class="hover-overlay-btn-img" (click)="buttonDisabled=false" *ngIf="buttonDisabled"><img src="assets/icons/search-experience/edit.svg"></div>
                             </button>  
                         </div>                                             
-                        <button class="btn-customize kr-sg-button-primary read-mode btn_lg"  (click)="selectSearchBox('button')" [ngClass]="{'activeBox':selectSearch=='button','added-tour':tourGuide==='step4'}" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" [disabled]="buttonDisabled" *ngIf="searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='outside'">
+                        <button class="btn-customize kr-sg-button-primary read-mode btn_lg"  (click)="selectSearchBox('button');closeAllBoxs('all');" [ngClass]="{'activeBox':selectSearch=='button','added-tour':tourGuide==='step4'}" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" [disabled]="buttonDisabled" *ngIf="searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='outside'">
                             <span>{{searchObject.searchWidgetConfig.buttonText}}</span>
                             <div class="hover-overlay-btn-img" (click)="buttonDisabled=false" *ngIf="buttonDisabled"><img src="assets/icons/search-experience/edit.svg"></div>
                         </button>
@@ -115,7 +115,7 @@
                         <div class="fill-colors-block" *ngSwitchCase="'inputBox'">
                             <div class="fill-color">
                                 <div class="label-color">Fill Color</div>                            
-                                <div class="box-color" [ngClass]="{'color-pallet-container': inputBox1}" (mouseover)="toggle=true;inputBox1=true;">
+                                <div class="box-color" [ngClass]="{'color-pallet-container': inputBox1}" (mouseover)="toggle=true;inputBox1=true;closeAllBoxs('toggle');">
                                      <input
                                         [style.background]="color"                                      
                                         [(colorPicker)]="color"
@@ -196,6 +196,7 @@
                                         [cpCloseClickOutside]="false"
                                         [(cpToggle)]='toggle2'
                                         readonly
+                                        id="inpBox"
                                     />
 
                                     <div class="box-color-content" *ngIf="placeholBox">
@@ -244,7 +245,7 @@
                             <div class="fill-colors-block">
                                 <div class="fill-color">
                                     <div class="label-color">Text Color</div>
-                                    <div class="box-color" [ngClass]="{'color-pallet-container': buttonTextColor}" (mouseover)="toggle3=true;buttonTextColor=true;">
+                                    <div class="box-color" [ngClass]="{'color-pallet-container': buttonTextColor}" (mouseover)="searchObject.searchWidgetConfig.searchButtonEnabled?[toggle3=true,buttonTextColor=true,closeAllBoxs('toggle3')]:null">
                                         <input
                                             [style.background]="color3"
                                             [(colorPicker)]="color3"
@@ -253,7 +254,7 @@
                                             (colorPickerClose)="onEventLog('buttonTextColor', $event)"
                                             [cpCloseClickOutside]="false"
                                             [(cpToggle)]='toggle3'
-                                            readonly
+                                            readonly                                            
                                             [ngClass]="{'input_disable':!(searchObject.searchWidgetConfig.searchButtonEnabled)}"
                                         />
     
@@ -275,7 +276,7 @@
                                 </div>
                                 <div class="fill-color">
                                     <div class="label-color">Fill Color</div>
-                                    <div class="box-color" [ngClass]="{'color-pallet-container': buttonFill}" (mouseover)="toggle4=true;buttonFill=true;">
+                                    <div class="box-color" [ngClass]="{'color-pallet-container': buttonFill}" (mouseover)="searchObject.searchWidgetConfig.searchButtonEnabled?[toggle4=true,buttonFill=true,closeAllBoxs('toggle4')]:null">
                                         <input
                                             [style.background]="color4"
                                             [(colorPicker)]="color4"
@@ -307,7 +308,7 @@
                                 <div class="fill-color">
                                     <div class="label-color">Border Color</div>
                                     <!-- border-color-pallet-->
-                                    <div class="box-color" [ngClass]="{'color-pallet-container': buttonBorder}" (mouseover)="toggle5=true;buttonBorder=true;">
+                                    <div class="box-color" [ngClass]="{'color-pallet-container': buttonBorder}" (mouseover)="searchObject.searchWidgetConfig.searchButtonEnabled?[toggle5=true,buttonBorder=true,closeAllBoxs('toggle5')]:null">
                                         <input
                                             [style.background]="color5"
                                             [(colorPicker)]="color5"
@@ -525,9 +526,9 @@
         </perfect-scrollbar>
     </div>
     <div class="footer-sec">
-        <button class="kr-sg-button-secondary btn_lg" (click)="nextTab('pre')" *ngIf="selectedTab!='experience'">Previous</button>
-        <button class="kr-sg-button-primary btn_lg" (click)="nextTab('nex')" *ngIf="selectedTab!=='interactions'">Next</button>     
-        <button class="kr-sg-button-primary btn_lg" (click)="saveSearchExperience()" *ngIf="selectedTab=='interactions'">Done</button>    
+        <button class="kr-sg-button-secondary btn_lg" (click)="nextTab('pre');closeAllBoxs('all');" *ngIf="selectedTab!='experience'">Previous</button>
+        <button class="kr-sg-button-primary btn_lg" (click)="nextTab('nex');closeAllBoxs('all');" *ngIf="selectedTab!=='interactions'">Next</button>     
+        <button class="kr-sg-button-primary btn_lg" (click)="saveSearchExperience();closeAllBoxs('all');" *ngIf="selectedTab=='interactions'">Done</button>    
     </div>
 </div>
 
