--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -99,7 +99,7 @@
                     font-weight: 500;
                     font-size: 12px;
                     line-height: 14px;
-                    margin-right: 30px;
+                    // margin-right: 30px;
                     cursor: pointer;
                     img{
                         margin-right: 7px;
