--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -44,7 +44,7 @@
                                 </div> 
                             </div>
                             <div [ngClass] = "{'disableDiv' : permisionView }">
-                                <button class="kr-sg-button-primary btn_lg" (click)="resetCustomization()">Reset</button>
+                                <button class="kr-sg-button-danger btn_lg" (click)="resetCustomization()">Reset</button>
                             </div> 
                         </div>
                         <ng-container *ngIf="!resultSelected">
@@ -60,8 +60,7 @@
                         </ng-container>                            
                     </div>
                     <div class ="info-div">
-                        <div>To add a customized query, click on the ball and select customize mode.</div>
-                        <div> All the changes will be recorded here.</div>
+                        <div>To Customize the results of a query, Click on the Test button at the top and enable customize mode.</div>
                     </div>
                     <div class="body-content">
                         <div class="empty-questions-selected d-none">
@@ -113,7 +112,7 @@
                                 </div>
                                 <div class="col-4 p-0 lef-info">
                                     <div class="approved_title">{{'resultRanking.last_changes_caps' | translate}}</div>
-                                    <div class="approved_date"><span class="time">{{lastModifiedOn | dateFormatPipe: 'DD-MMM-YYYY' || '--'}}</span></div>
+                                    <div class="approved_date"><span class="time">{{lastModifiedOn | dateFormatPipe: 'd MMMM ,YYYY' || '--'}}</span></div>
                                 </div>
                                 <div class="col-4 p-0 actions-sec">
                                     <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
